--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
+
 {
   "version": 2,
-  "builds": [ { "src": "server.js", "use": "@vercel/node" } ],
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
-    { "src": "/socket.io/(.*)", "dest": "server.js" },
-    { "src": "/(.*)", "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "server.js" }
+    {
+      "src": "/(.*)",
+      "dest": "server.js"
+    }
   ]
 }
