feat: Implement specific Vercel routing for Socket.IO

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
-
 {
   "version": 2,
   "builds": [
@@ -9,8 +8,12 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/socket.io/.*",
       "dest": "server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
     }
   ]
 }
